them taget + gom i va p o fot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,9 +305,11 @@ footer {
   padding-top: 0px !important;
 }
 .fot-info p{
-    margin-left: 5px;
     text-align: center;
+}
 
+.fot-info i{
+    margin-right: 6px;
 }
 
 .fot-bottom{
