--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,9 @@
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.4);
-    width: 250px;
+    width: 260px;
     height: 350px;
-    padding: 8px;
+    padding: 10px;
 }
 .map-title .control-info {
     border: none;
@@ -88,6 +88,7 @@
 .map-content {
   overflow: auto;
   height: 282px;
+  /* padding:5px; */
 }
 .list-control-map{
     position: absolute;
@@ -243,15 +244,15 @@ footer {
 
 .logo-and-social {
     display: grid;
-    grid-template-columns: 110px 1fr 110px;
-    grid-template-rows: 110px;
+    grid-template-columns: 100px 1fr 100px;
+    grid-template-rows: 100px;
     align-items: center;
     text-align: center;
     padding: 10px 10px 0px 10px !important; 
 }
 .fot-logo{
-    width: 110px;
-    height: 110px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     align-items: center;
 
@@ -302,7 +303,7 @@ footer {
 }
 .fot-info{
   border-bottom: 3px solid #242423;
-  padding-top: 0px !important;
+  padding-top: 10px !important;
 }
 .fot-info p{
     text-align: center;
@@ -343,12 +344,12 @@ footer {
 
 .back-to-top {
     position: fixed;
-    bottom: 60px;
-    right: 30px;
+    bottom: 50px;
+    right: 15px;
     z-index: 1000;
     cursor: pointer;
-    width: 55px;
-    height: 55px;
+    width: 50px;
+    height: 50px;
     background-color: #FF7757;
     border-radius: 50%;
 }
@@ -388,15 +389,15 @@ footer {
     text-align: center;
     gap: 10px;
     display: grid;
-    grid-template-columns: 80px 1fr 80px;
+    grid-template-columns: 75px 1fr 75px;
     grid-template-areas:
       "logo1 mid logo2";
     align-items: center;
 
   }
   .fot-logo {
-    height: 80px;
-    width: 80px;
+    height: 75px;
+    width: 75px;
     margin: 0 auto;
     display: block;
   }
@@ -442,8 +443,8 @@ footer {
     min-height: unset;
     padding: 10px 0;
   } */
-  .fot-info h2 { font-size: 17px; margin-bottom: 8px; }
-  .fot-info h3 { font-size: 15px; margin-bottom: 8px; }
+  .fot-info h2 { font-size: 20px; margin-bottom: 8px; }
+  .fot-info h3 { font-size: 16px; margin-bottom: 8px; }
   .fot-info div { margin-bottom: 6px; }
   .fot-info p { font-size: 13px; margin-left: 4px; }
   .fot-info i { font-size: 13px;}
@@ -460,7 +461,7 @@ footer {
   .map-info {
     font-size: 13px;
     padding: 10px;
-    width: 42%;
+    width: 45%;
     left: 60px;
   }
   .map-info p { font-size: 12px; }
@@ -491,7 +492,7 @@ footer {
   }
   .card-anh img { height: 120px; object-fit: cover; }
   .control-list { font-size: 20px; gap: 10px; }
-  .fot-logo { width: 60px; height: auto; }
+  .fot-logo { width: 55px; height: 55px; }
   .fot-info h2 { font-size: 16px; }
   .fot-info h3 { font-size: 13px; }
   .fot-info p { font-size: 13px; }
@@ -513,8 +514,6 @@ footer {
   .back-to-top {
     width: 45px;
     height: 45px;
-    bottom: 10px;
-    right: 8px;
   }
 }
 
@@ -546,8 +545,6 @@ footer {
   .back-to-top{
     width: 40px;
     height: 40px;
-    bottom: 10px;
-    right: 8px;
   }
 }
 /* =============== End Responsive Design (Gộp lại) =============== */
