--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,32 +9,61 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Mali';
 }
 
 a {
+  font-family: sans-serif;
   text-decoration: none;
 }
 
+a:hover, .timeline-item:hover {
+  cursor: pointer;
+}
+
+ul {
+  margin-bottom: 16px;
+}
+
+img {
+  max-width: 100%;
+  object-position: center;
+}
+
 h1 {
-    color: #B2910E;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 64px;
-    font-weight: bold;
+  color: #B2910E;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .text--decor {
-    border: 1px solid #b1b1b1;
-    position: relative;
-    width: 880px;
-    height: 1px;
-    margin: 24px auto 10px auto;
-    top: -10px;
+  border: 1px solid #b1b1b1;
+  position: relative;
+  width: 100%;
+  height: 1px;
+  margin: 24px auto 10px auto;
+  top: -10px;
 }
 
-span {
-    color: #000000;
-    font-size: 24px;
-    text-align: justify;
-    opacity: 70%;
+.intro {
+  display: block;
+  color: #000000;
+  font-size: 24px;
+  text-align: justify;
+  opacity: 70%;
+}
+
+.m-container {
+  margin: 24px 0;
+}
+
+*, :after, :before {
+    box-sizing: border-box;
+}
+
+.container, .containers {
+    margin: 0 auto;
+    padding: 0px 16px !important;
 }
