--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,20 @@
 /* Rua */
 .menu {
-    position: relative;
+    position: fixed;
+    max-width: 100vw !important;
+    top: 0;
     background-color: white;
     display: flex;
     align-items: center;
-    padding: 20px 30px;
+    padding: 0px 80px !important;
     overflow: hidden;
-    z-index: 0;
+    z-index: 1000;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    background: rgba(255, 255, 255, 0.95);
 }
-#gioithieu {
-    color: white;
-    width: 140px;
-    height: 44px;
-    display: inline-block;
-    text-align: center;
-    line-height: 44px;
-    border: none;
-    outline: none;
-}
+
+
 
 .menu a {
     font-family: "Mali", sans-serif;
@@ -29,11 +24,6 @@
     font-size: 16px;
     margin-right: 20px;
     z-index: 2;
-}
-
-.menu a:first-of-type {
-    margin-left: 100px;
-    color: green;
 }
 
 .menu a:hover {
@@ -349,6 +339,31 @@ button{
     transition: all .3s ease;
     cursor: pointer;
 
+}
+
+.nav-links > a.active {
+    text-align: center;
+    min-width: 120px;
+    padding: 8px 14px;
+    background-image: url(../img/Button/bg-red-tl.jpg), url(../img/Button/bg-red-tr.jpg), url(../img/Button/bg-red-br.jpg), url(../img/Button/bg-red-bl.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-color: #a5190e;
+    border-radius: 5px;
+    position: relative;
+    text-decoration: none;
+    color: #fff;
+}
+
+.nav-links > a.active::after {
+    border: 1px solid #f7bd01;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    right: 4px;
+    bottom: 4px;
 }
 
 .bg-red-corners {
@@ -942,7 +957,7 @@ button{
 .header-section {
     width: 880px;
     margin: 0 auto;
-    margin-top: 20px !important;
+    padding-top: 20px !important;
 }
 /* End Miracle */
 
