fix pading map-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1066,7 +1066,7 @@ button{
 .map-content {
   overflow: auto;
   height: 282px;
-  /* padding:5px; */
+  padding:10px;
 }
 .list-control-map{
     position: absolute;
