--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,7 +429,7 @@ button{
 
     .nav-links a {
         width: 100%;
-        text-align: left;
+        text-align: center;
         padding-left: 10px;
         font-family: "Mali", sans-serif;
         font-size: 20px;
