--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,13 @@
     background-color: white;
     display: flex;
     align-items: center;
-    padding: 0px 80px !important;
+    padding: 5px 80 5px 80px !important;
     overflow: hidden;
     z-index: 1000;
     flex-wrap: nowrap;
     justify-content: space-around;
     background: rgba(255, 255, 255, 0.95);
+    height: 90px;
 }
 
 
@@ -22,8 +23,11 @@
     color: #000;
     font-weight: 600;
     font-size: 16px;
-    margin-right: 20px;
     z-index: 2;
+
+    display: flex;
+    justify-content: center;
+    align-items:center ;
 }
 
 .menu a:hover {
@@ -99,6 +103,7 @@ button{
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    margin-top: 10px;
 }
 .title{
     color: #B2910E;
@@ -391,8 +396,10 @@ button{
 }
 @media (min-width: 1025px) {
     .menu a{
-        margin-right: 25px;
         font-size: 20px;
+    }
+    .nav-links{
+        gap: 30px;
     }
 }
 @media (max-width: 960px) {
@@ -411,12 +418,22 @@ button{
     .event-detail-child{
         margin-bottom: 12px;
     }
+    .menu {
+        padding-right:50px !important;
+        padding-left: 50px !important;
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+    }
+    h1{
+        font-size: 32px;
+    }
 }
 @media (max-width: 768px) {
     .menu {
         flex-direction: column;
         align-items: flex-start;
-        height: auto;
+        height: 90px;
     }
     .color-circle {
         width: 30px;
@@ -529,6 +546,20 @@ button{
     }
     .event-contents{
         margin-left: 30px;
+    }
+    h1{
+        font-size: 30px;
+    }
+
+    .menu{
+        height: 80px;
+    }
+    .menu img{
+        max-width: 60px;
+        max-height: 60px;
+    }
+    .banner{
+        margin-top: 0 !important;
     }
 }
 
@@ -1491,14 +1522,14 @@ footer {
   .fot-info p { font-size: 13px; }
   .fot-info i { font-size: 13px;}
   .logo-and-social {
-    grid-template-columns: 60px 1fr 60px;
+    grid-template-columns: 75px 1fr 75px;
     grid-template-areas:
       "logo1 mid logo2";
     align-items: center;
     padding: 6px 0;
-    grid-template-rows: 60px;
+    grid-template-rows: 75px;
   }
-  .fot-logo { height: 60px; width: 60px; }
+  .fot-logo { height: 75px; width: 75px; }
   .fot-info h2 { font-size: 18px; }
   .fot-info h3 { font-size: 15px; }
   .fot-info p { font-size: 14px; }
@@ -1524,18 +1555,18 @@ footer {
     max-width:260px;
   }
   .logo-and-social {
-    grid-template-columns: 50px 1fr 50px;
+    grid-template-columns: 60px 1fr 60px;
     grid-template-areas:
       "logo1 mid logo2";
     align-items: center;
     padding: 4px 0;
-    grid-template-rows: 50px;
+    grid-template-rows: 60px;
   }
 
 
   .map-title h2 { font-size: 13px; }
-  .fot-logo { width: 50px; height: 50px; }
-  .fot-info h2 { font-size: 14px; }
+  .fot-logo { width: 60px; height: 60px; }
+  .fot-info h2 { font-size: 16px; }
   .fot-info h3 { font-size: 12px; }
   .fot-info p { font-size: 10px; }
   .fot-mid i { font-size: 15px; }
