--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,7 @@ button{
     right: 4px;
     bottom: 4px;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
     .menu a{
         font-size: 20px;
     }
@@ -552,6 +552,7 @@ button{
     .event-contents{
         margin-left: 30px;
     }
+
     h1{
         font-size: 30px;
     }
@@ -561,27 +562,20 @@ button{
         align-items: flex-start;
         height: auto;
     }
-    .menu-toggle {
+    /* .menu-toggle {
         display: block;
         position: absolute;
         right: 16px;
         top: 16px;
         z-index: 1001;
-    }
-    .nav-links {
-        display: none !important;
-        flex-direction: column;
-        width: 100%;
-        margin: 10px 0px 10px 16px;
-        gap: 10px;
-    }
-    .nav-links.active {
+    } */
+    /* .nav-links.active {
         display: flex !important;
-    }
-    .menu img{
+    } */
+    /* .menu .logo{
         max-width: 60px;
         max-height: 60px;
-    }
+    } */
     .banner{
         margin-top: 0 !important;
     }
@@ -1428,12 +1422,12 @@ footer {
     text-shadow: 0 2px 8px rgba(0,0,0,0.18);
 }
 /* ================= Responsive Design (Gộp lại) ================ */
-@media (max-width: 1280px) {
+/* @media (max-width: 1280px) {
   .container { max-width: 1000px; }
   .list-dia-diem { gap: 12px; }
   .map-info { max-width: 400px; }
 
-}
+} */
 
 @media (max-width: 1024px) {
   .logo-and-social {
@@ -1501,6 +1495,18 @@ footer {
   .fot-bottom { font-size: 12px; height: auto; padding: 8px 0; text-align: center; }
 }
 
+@media (max-width: 960px) {
+    .fot-info h2 { font-size: 25px; margin-bottom: 8px; }
+    .fot-info h3 { font-size: 20px; margin-bottom: 8px; }
+    .list-social i { font-size: 25px;}
+    footer p{
+        font-size: 16px;
+    }
+    .fot-info p{
+        font-size: 16px;
+    }
+}
+
 @media (max-width: 768px) {
   .list-control-map { top: 150px; }
   .container { padding: 2px; }
@@ -1555,7 +1561,7 @@ footer {
   }
   .fot-logo { height: 75px; width: 75px; }
   .fot-info h2 { font-size: 18px; }
-  .fot-info h3 { font-size: 15px; }
+  .fot-info h3 { font-size: 16px; }
   .fot-info p { font-size: 14px; }
   .fot-bottom { font-size: 12px; padding: 4px 0; }
   .list-social i { font-size: 18px; }
@@ -1590,9 +1596,9 @@ footer {
 
   .map-title h2 { font-size: 13px; }
   .fot-logo { width: 60px; height: 60px; }
-  .fot-info h2 { font-size: 16px; }
-  .fot-info h3 { font-size: 12px; }
-  .fot-info p { font-size: 10px; }
+  .fot-info h2 { font-size: 18px; }
+  .fot-info h3 { font-size: 16px; }
+  .fot-info p { font-size: 12px; }
   .fot-mid i { font-size: 15px; }
   .fot-info i { font-size: 12px;}
   .fot-bottom p{ font-size: 10px; }
